Updated files with proper headers and footers.

--- a/DixxieMae_Graphics/index.html
+++ b/DixxieMae_Graphics/index.html
@@ -2,25 +2,66 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<title>Dixxie Mae Graphics</title>
+
+		<link href="css/bootstrap.min.css" rel="stylesheet">
+		<link href='http://fonts.googleapis.com/css?family=Bangers|Oswald:400,300,700|Roboto:400,300,100' rel='stylesheet' type='text/css'>
+    	<link rel="stylesheet" type="text/css" href="css/dixxiemae.css">
 	</head>
+
 	<body>
-		<header>
-			<a href="index.html">
-				<h1>Dixxie Mae Graphics</h1>
-				<h2>A little bit of everything!</h2>
-			</a>
-			<nav>
+		<header id="top" class="main-header container-fluid img-responsive">
+			<a id="title" href="index.html">
+				<span class="title text-center"><h1>Dixxie Mae Graphics</h1><h3>"A little bit of everything"</h3></span></a>
+<!-- 				<nav id="top-nav"class="links">			
+					<ul role="navigation" class="nav nav-tabs">
+					  <li role="presentation" class="active"><a href="index.html">Home</a></li>
+					  <li role="presentation"><a href="about.html">About</a></li>
+					  <li role="presentation"><a href="market.html">Market</a></li>
+					  <li role="presentation"><a href="contact.html">Contact</a></li>
+					</ul>
+				</nav> -->
 				
-			</nav>
 		</header>
-		<section>
-	      	<p>Digital illustration and design, catering primarily to digital comic illustrations and shirt/sticker design. Inspirations from geek and pop culture. 
-			</p>
-		</section>
-		<footer>
-			 <a href="http://twitter.com"><img src="img/twitter.png" alt="Twitter Logo" class="social-icon"></a>
-			<p>&copy; 2015 Pete Isgrigg</p>
+		
+		<div class="primary ">
+			<div class="summary container-fluid">
+		      	<p>Digital illustration and design, catering primarily to digital comic illustrations and shirt/sticker design. Inspirations from geek and pop culture. 
+				</p>
+			</div>
+
+
+			<div class="gallery row">
+				<img src="img/hank.png" class="img-responsive">
+			</div>
+			<div class="link-buttons">
+				<ul>
+					<li class="inpage1"><a href="about.html">ABOUT</a></li>
+					<li class="inpage2"><a href="contact.html">CONTACT</a></li>
+					<li class="inpage3"><a href="market.html">MARKETPLACE</a></li>
+				</ul>
+			</div>			
+		</div>	
+
+
+		<footer id="bottom" class="main-footer container-fluid">
+			<div id="social-media">
+				<a href="http://twitter.com"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
+				<a href="http://facebook.com/"><img src="img/facebook-wrap.png" alt="Facebook Logo"class="social-icon"></a>
+			</div>
+			<div>
+				<nav id="bottom-nav" class="links">
+					<a href="index.html">Home</a>
+					<a href="about.html">About</a>
+					<a href="market.html">Market</a>
+					<a href="contact.html">Contact</a>
+				</nav>
+				<p>&copy; 2015 Pete Isgrigg</p>
+			</div>	
 		</footer>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 	</body>
 </html>
