updated a social media icons and about, contact pages

--- a/DixxieMae_Graphics/about.html
+++ b/DixxieMae_Graphics/about.html
@@ -16,32 +16,57 @@
 			<a id="title" href="index.html">
 				<span class="title text-center"><h1>Dixxie Mae Graphics</h1><h3>"A little bit of everything"</h3></span></a>
 				<nav id="top-nav"class="links">
-					<ul class="nav-justified">
-						<li><a href="about.html">About</a></li>
-						<li><a href="market.html">Market</a></li>
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="market.html">Marketplace</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>	
 				</nav>
 				
 		</header>
+		<div class="primary">
+
+			<div class="container-fluid">
+					<h2 class="subtitle text-center"><u>Image Gallery</u></h2>
+					<ul id="imageGallery" class="gallery">
+						<li><a href="img/collection/ash.png"><img src="img/collection/ash.png" width="100" alt="Army of Darkness"></a></li>
+						<li><a href="img/collection/candyapple.png"><img src="img/collection/candyapple.png" width="100" alt="Candy Apple"></a></li>
+						<li><a href="img/collection/carniverouswives.png"><img src="img/collection/carniverouswives.png" width="100" alt="carniverouswives.png"></a></li>
+						<li><a href="img/collection/cupcake_gun_tattoo.png"><img src="img/collection/cupcake_gun_tattoo.png" width="100" alt="cupcake_gun_tattoo.png"></a></li>
+						<li><a href="img/collection/mermaidminnie.png"><img src="img/collection/mermaidminnie.png" width="100" alt="mermaidminnie.png"></a></li>
+						<li><a href="img/collection/skull_bunny_pattern_by_dixxiemae-d71t3st.png"><img src="img/collection/skull_bunny_pattern_by_dixxiemae-d71t3st.png" width="100" alt="skull_bunny_pattern.png"></a></li>
+						<li><a href="img/collection/swhite.png"><img src="img/collection/swhite.png" width="100" alt="Snow White"></a></li>
+					</ul>
+			</div>
+			<p class="summary2">Dixxie Mae is an art and design brand with works made by Brooke Hernando. Based out of Louisville with a strong online presence, you can find most of my works on my Tumblr or on my other pages listed below.</p>
+
+			<p class="summary2">I have been working in digital art since about 2004 and am trying to improve and try new things everyday. Most work is done in either Photoshop CS4 or CS6, though I’m open to trying out different programs and tablets. I work in traditional mediums as well, but that’s usually involved with my comics.</p>
+
+			<p class="summary2">I have a strong art background and I cover everything from comics, sketches, digital illustrations, portraits, graphic design, and some photography. I am also familiar with almost everything else.
+			</p>
+			
+		</div>
+		
 
 
-
-
-<footer id="bottom" class="main-footer container-fluid">
+		<footer id="bottom" class="main-footer container-fluid">
 			<div id="social-media">
-				<a href="http://twitter.com"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
-				<a href="http://facebook.com/"><img src="img/facebook-wrap.png" alt="Facebook Logo"class="social-icon"></a>
+				<a href="http://twitter.com" class="social-icon"><img src="img/icons/twitter.png" alt="Twitter Logo" class="social-icon"></a>
+				<a href="http://facebook.com/" class="social-icon"><img src="img/icons/facebook.png" alt="Facebook Logo"class="social-icon"></a>
+				<a href="http://tumblr.com/" class="social-icon"><img src="img/icons/tumblr.png" alt="tumblr Logo"class="social-icon"></a>
+				<a href="http://instagram.com" class="social-icon"><img src="img/icons/instagram.png" alt="Instagram Logo"class="social-icon"></a>
 			</div>
 			<div>
 				<nav id="bottom-nav" class="links">
 					<a href="index.html">Home</a>
 					<a href="about.html">About</a>
-					<a href="market.html">Market</a>
+					<a href="market.html">Marketplace</a>
 					<a href="contact.html">Contact</a>
 				</nav>
 				<p>&copy; 2015 Pete Isgrigg</p>
 			</div>	
 		</footer>
+	<script src="http://code.jquery.com/jquery-1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/DM.js" type="text/javascript" charset="utf-8"></script>
 	</body>
 </html>
