--- a/DixxieMae_Graphics/contact.html
+++ b/DixxieMae_Graphics/contact.html
@@ -15,29 +15,49 @@
 		<header id="top" class="main-header container-fluid img-responsive">
 			<a id="title" href="index.html">
 				<span class="title text-center"><h1>Dixxie Mae Graphics</h1><h3>"A little bit of everything"</h3></span></a>
-<!-- 				<nav id="top-nav"class="links">
-					<ul>
+				<nav id="top-nav">
+					<ul class="links">
+						<li><a href="index.html">Home</a></li>
 						<li><a href="about.html">About</a></li>
-						<li><a href="market.html">Market</a></li>
-						<li><a href="contact.html">Contact</a></li>
+						<li><a href="market.html">Marketplace</a></li>
 					</ul>	
 				</nav>
-				 -->
+				
+				
 		</header>
 
+		<div class="primary">
+			<form id="contactsheet" action="" method="post">
+				<legend class="subtitle"><h2>Contact Form</h2></legend>
+				<fieldset class="">
+					<label for="name">Name:</label><br>	
+					<input type="text" id="name" name="firstname"><br>
+					<label for="email">Email Address:</label><br>
+					<input type="text" name="email"><br>
+				</fieldset>	
+			</form>
+			<div class="container-fluid">
+				<h2 class="subtitle text-center"><u></u></h2>
+				<p></p>
+
+			</div>
+		
+		</div>
 
 
 
-<footer id="bottom" class="main-footer container-fluid">
+		<footer id="bottom" class="main-footer container-fluid">
 			<div id="social-media">
-				<a href="http://twitter.com"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
-				<a href="http://facebook.com/"><img src="img/facebook-wrap.png" alt="Facebook Logo"class="social-icon"></a>
+				<a href="http://twitter.com" class="social-icon"><img src="img/icons/twitter.png" alt="Twitter Logo" class="social-icon"></a>
+				<a href="http://facebook.com/" class="social-icon"><img src="img/icons/facebook.png" alt="Facebook Logo"class="social-icon"></a>
+				<a href="http://tumblr.com/" class="social-icon"><img src="img/icons/tumblr.png" alt="tumblr Logo"class="social-icon"></a>
+				<a href="http://instagram.com" class="social-icon"><img src="img/icons/instagram.png" alt="Instagram Logo"class="social-icon"></a>
 			</div>
 			<div>
 				<nav id="bottom-nav" class="links">
 					<a href="index.html">Home</a>
 					<a href="about.html">About</a>
-					<a href="market.html">Market</a>
+					<a href="market.html">Marketplace</a>
 					<a href="contact.html">Contact</a>
 				</nav>
 				<p>&copy; 2015 Pete Isgrigg</p>
