Starting over with CSS and implementing Bootstrap

--- a/DixxieMae_Graphics/contact.html
+++ b/DixxieMae_Graphics/contact.html
@@ -27,18 +27,19 @@
 		</header>
 
 		<div class="primary">
-			<form id="contactsheet" action="" method="post">
+			<form id="contact-form" action="" method="post">
 				<legend class="subtitle"><h2>Contact Form</h2></legend>
-				<fieldset class="">
+				<fieldset class="contact-info">
 					<label for="name">Name:</label><br>	
 					<input type="text" id="name" name="firstname"><br>
-					<label for="email">Email Address:</label><br>
-					<input type="text" name="email"><br>
+					<label for="emailaddress">Email Address:</label><br>
+					<input type="text" id="emailaddress" name="email"><br>
+					<button type="submit" formaction="">SUBMIT</button>
 				</fieldset>	
 			</form>
-			<div class="container-fluid">
-				<h2 class="subtitle text-center"><u></u></h2>
-				<p></p>
+			<div class="contact-text container-fluid">
+				<h2 class="subtitle text-center"><u>Looking for an artist?</u></h2>
+				<p class="summary2">If you have questions or are looking to hire an amazing graphic artist, please take the time to submit your name and email. We will do everything we can to respond promptly. If you are more comfortable with Facebook please see our link at the bottom of the page!</p>
 
 			</div>
 		
