--- a/DixxieMae_Graphics/index.html
+++ b/DixxieMae_Graphics/index.html
@@ -8,23 +8,61 @@
 
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href='http://fonts.googleapis.com/css?family=Bangers|Oswald:400,300,700|Roboto:400,300,100' rel='stylesheet' type='text/css'>
-    	<link rel="stylesheet" type="text/css" href="css/dixxiemae.css">
+    	<!-- <link rel="stylesheet" type="text/css" href="css/dixxiemae.css"> -->
+    	<link rel="stylesheet" type="text/css" href="css/dixxiemae1.css">
 	</head>
 
 	<body>
+<!-- 		<div class="navbar navbar-default">
+			<div class="container">
+				<a href="index.com">DIXXIE MAE</a>
+			</div>
+		</div> -->
+
+
+
+
+
+
+
+
+
+
+
+
+		<nav class="navbar navbar-default navbar-fixed-top">
+
+				<div class="container">
+					<a class="main-logo pull-left"href="index.html">DIXXIE MAE</a>
+					<button type="button" class="navbar-toggle" data-toggle="collapsed" data-target=".navbar-collapse">
+						<span class="sr-only"></span>
+				       	<span class="icon-bar"></span>
+				        <span class="icon-bar"></span>
+				        <span class="icon-bar"></span>
+					</button>
+				</div>
+
+				<div class="collapse navbar-collapse" id="navigation">
+					<ul class="nav navbar-nav pull-right">
+						<li class="active"><a href="about.html">About</a></li>
+						<li><a href="contact.html">Contact</a></li>
+						<li><a href="market.html">Marketplace</a></li>
+					</ul>
+				</div>
+			
+		</nav>
+
+
+
+
+
+
+
+
 		<div class="main-header container-fluid img-responsive">
 			<header id="top">
 				<a id="title" href="index.html">
-					<span class="title text-center"><h1>Dixxie Mae Graphics</h1><h3>"A little bit of everything"</h3></span></a>
-	<!-- 				<nav id="top-nav"class="links">			
-						<ul role="navigation" class="nav nav-tabs">
-						  <li role="presentation" class="active"><a href="index.html">Home</a></li>
-						  <li role="presentation"><a href="about.html">About</a></li>
-						  <li role="presentation"><a href="market.html">Market</a></li>
-						  <li role="presentation"><a href="contact.html">Contact</a></li>
-						</ul>
-					</nav> -->
-					
+				<span class="title text-center"><h1>Dixxie Mae Graphics</h1><h3>"A little bit of everything"</h3/span></a>			
 			</header>
 		</div>	
 		<div class="primary container-fluid">
@@ -62,9 +100,10 @@
 					<a href="market.html">Marketplace</a>
 					<a href="contact.html">Contact</a>
 				</nav>
-				<p>&copy; 2015 Pete Isgrigg</p>
+				
 			</div>	
 		</footer>
+		<div><p>&copy; 2015 Pete Isgrigg</p></div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 	</body>
