Making index responsive

--- a/DixxieMae_Graphics/index.html
+++ b/DixxieMae_Graphics/index.html
@@ -29,11 +29,11 @@
 
 
 
-
-		<nav class="navbar navbar-default navbar-fixed-top">
+<!-- 
+		<nav class="navbar navbar-inverse navbar-fixed-top">
 
 				<div class="container">
-					<a class="main-logo pull-left"href="index.html">DIXXIE MAE</a>
+					<a class="main-logo pull-left logo"href="index.html">DIXXIE MAE</a>
 					<button type="button" class="navbar-toggle" data-toggle="collapsed" data-target=".navbar-collapse">
 						<span class="sr-only"></span>
 				       	<span class="icon-bar"></span>
@@ -51,6 +51,7 @@
 				</div>
 			
 		</nav>
+ -->
 
 
 
@@ -58,53 +59,56 @@
 
 
 
-
-		<div class="main-header container-fluid img-responsive">
+		<div class="main-header container">
 			<header id="top">
 				<a id="title" href="index.html">
-				<span class="title text-center"><h1>Dixxie Mae Graphics</h1><h3>"A little bit of everything"</h3/span></a>			
+				<span class="title text-center"><h1>Dixxie Mae Graphics</h1><h2>"A little bit of everything"</h2></span></a>
+				<!-- <a id="subtitle" href="index.html">
+				<span class="subtitle"><h2>"A little bit of everything"</h2></span></a>		 -->
 			</header>
-		</div>	
-		<div class="primary container-fluid">
-				      	<p class="summary conainer">Digital illustration and design, catering primarily to digital comic illustrations and shirt/sticker design. Inspirations from geek and pop culture. 
-						</p>
-
-						
-
-
-				<div class="index-img">
-					<img src="img/collection/hank.png" class="img-responsive">
+				</div>	
+		<div class="container main-content">
+			<div class="primary row">
+		      	<div class="col-md-5 text-center">
+			      	<p class="summary">Digital illustration and design, catering primarily to digital comic illustrations and shirt/sticker design. Inspirations from geek and pop culture.</p>
+  					<div class="row">
+						<div class="col-md-4 link-buttons btn-group center-block" role="group">
+	  						<!-- <ul> -->
+	  							<a class="btn inpage1" href="about.html" role="button">ABOUT</a>
+	  							<a class="btn inpage2" href="contact.html" role="button">CONTACT</a>
+	  							<a class="btn inpage3" href="market.html" role="button">MARKETPLACE</a>
+	  						<!-- </ul> -->
+	  					</div>
+					</div>	
+		      	</div>
+			
+				<div class="col-md-7">
+					<img src="img/unnamed.png" class="index-img img-circle img-responsive">
 				</div>
-
-			<div class="link-buttons container-fluid">
-				<ul>
-					<a href="about.html"><li class="inpage1">ABOUT</li></a>
-					<a href="contact.html"><li class="inpage2">CONTACT</li></a>
-					<a href="market.html"><li class="inpage3">MARKETPLACE</li></a>
-				</ul>
-			</div>			
-		</div>	
-
-
-		<footer id="bottom" class="main-footer container-fluid">
-			<div id="social-media">
-				<a href="http://twitter.com" class="social-icon"><img src="img/icons/twitter.png" alt="Twitter Logo" class="social-icon"></a>
-				<a href="http://facebook.com/" class="social-icon"><img src="img/icons/facebook.png" alt="Facebook Logo"class="social-icon"></a>
-				<a href="http://tumblr.com/" class="social-icon"><img src="img/icons/tumblr.png" alt="tumblr Logo"class="social-icon"></a>
-				<a href="http://instagram.com" class="social-icon"><img src="img/icons/instagram.png" alt="Instagram Logo"class="social-icon"></a>
-			</div>
-			<div>
-				<nav id="bottom-nav" class="links">
-					<a href="index.html">Home</a>
-					<a href="about.html">About</a>
-					<a href="market.html">Marketplace</a>
-					<a href="contact.html">Contact</a>
-				</nav>
-				
 			</div>	
+		</div>
+
+
+		<footer id="bottom" class="main-footer container">
+			<div class="rows">
+				<div id="social-media" class="col-xs-12 pull-left">
+					<a href="http://twitter.com" class="social-icon"><img src="img/icons/twitter.png" alt="Twitter Logo" class="social-icon" width="50"></a>
+					<a href="http://facebook.com/" class="social-icon" ><img src="img/icons/facebook.png" alt="Facebook Logo"class="social-icon" width="50"></a>
+					<a href="http://tumblr.com/" class="social-icon"><img src="img/icons/tumblr.png" alt="tumblr Logo"class="social-icon" width="50"></a>
+					<a href="http://instagram.com" class="social-icon"><img src="img/icons/instagram.png" alt="Instagram Logo"class="social-icon" width="50"></a>
+					<h4 class="pull-right">&copy; 2015 Pete Isgrigg</h4>
+				</div>
+				<div class="col-xs-6">
+<!-- 					<nav id="bottom-nav" class="links">
+						<a href="index.html">Home</a>
+						<a href="about.html">About</a>
+						<a href="market.html">Marketplace</a>
+						<a href="contact.html">Contact</a>
+					</nav>			
+				</div>	 -->
+			</div>
 		</footer>
-		<div><p>&copy; 2015 Pete Isgrigg</p></div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
 	</body>
 </html>
