Updated CSS and Resposiveness
Updated CSS and Resposiveness

--- a/DixxieMae_Graphics/testcode.html
+++ b/DixxieMae_Graphics/testcode.html
@@ -1,12 +1,90 @@
-				<nav id="top-nav"class="nav nav-tabs links">
-					<ul>
-						<li><a href="index.html" class="selected">Home</a></li>
-						<li><a href="about.html">About</a></li>
-						<li><a href="market.html">Market</a></li>
-						<li><a href="contact.html">Contact</a></li>
-					</ul>	
-				</nav>
+
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+		<title>Dixxie Mae Graphics</title>
+
+		<link href="css/bootstrap.min.css" rel="stylesheet">
+		<link href='http://fonts.googleapis.com/css?family=Bangers|Oswald:400,300,700|Roboto:400,300,100' rel='stylesheet' type='text/css'>
+    	<link rel="stylesheet" type="text/css" href="css/dixxiemae1.css">
+	</head>
+
+	<body>
+		<header id="top" class="main-header2 container-fluid img-responsive">
+			<a id="title" href="index.html">
+				<span class="title2 text-center"><h1>Dixxie Mae Graphics</h1><h2>"A little bit of everything"</h2></span></a>
+		</header>
+		<nav id="top-nav">
+			<ul class="nav nav-pills nav-justified">
+			  <li role="presentation" class="active"><a class="btn-default inpage0" href="index.html" role="button">HOME</a></li>
+			  <li role="presentation"><a class="btn inpage1" href="about.html" role="button">ABOUT</a></li>
+			  <li role="presentation"><a class="btn inpage2" href="contact.html" role="button">CONTACT</a></li>
+			  <li role="presentation"><a class="btn inpage3" href="gallery.html" role="button">GALLERY</a></li>
+			</ul>	
+		</nav>
+
+<!-- 	<a class="btn-default inpage0" href="index.html" role="button">HOME</a>
+						<a class="btn inpage1" href="about.html" role="button">ABOUT</a>
+						<a class="btn inpage2" href="contact.html" role="button">CONTACT</a>
+						<a class="btn inpage3" href="gallery.html" role="button">GALLERY</a> -->
 
 
 
-				<li><button type="button" class="btn-lg btn-block link" ><a href="about.html">ABOUT</a></button></li>
+
+
+
+
+
+		<div class="primary">
+			<div class="container">
+				<div class="row">
+					<div>
+						<div class="col-md-8">
+							<p class="summary2">Dixxie Mae is an art and design brand with works made by Brooke Hernando. Based out of Louisville with a strong online presence, you can find most of my works on my Tumblr or on my other pages listed below.</p>
+											
+							<p class="summary2">I have been working in digital art since about 2004 and am trying to improve and try new things everyday. Most work is done in either Photoshop CS4 or CS6, though I’m open to trying out different programs and tablets. I work in traditional mediums as well, but that’s usually involved with my comics.</p>
+
+							<p class="summary2">I have a strong art background and I cover everything from comics, sketches, digital illustrations, portraits, graphic design, and some photography. I am also familiar with almost everything else.</p>
+						</div>
+						<div class="col-md-6 link-buttons about-link btn-group-vertical" role="group">
+						<a class="btn inpage0" href="index.html" role="button">HOME</a>
+						<a class="btn inpage1" href="about.html" role="button">ABOUT</a>
+						<a class="btn inpage2" href="contact.html" role="button">CONTACT</a>
+						<a class="btn inpage3" href="gallery.html" role="button">GALLERY</a>
+						</div>
+					</div>	
+				</div>
+			</div>
+			
+		</div>
+		
+
+
+		<footer id="bottom" class="main-footer container-fluid">
+			<div class="rows">
+				<div id="social-media" class="col-xs-4 col-xs-offset-4 social-media">
+					<a href="http://twitter.com" class="social-icon"><img src="img/icons/twitter.png" alt="Twitter Logo" class="social-icon" width="50"></a>
+					<a href="http://facebook.com/" class="social-icon " ><img src="img/icons/facebook.png" alt="Facebook Logo"class="social-icon" width="50"></a>
+					<a href="http://tumblr.com/" class="social-icon"><img src="img/icons/tumblr.png" alt="tumblr Logo"class="social-icon" width="50"></a>
+					<a href="http://instagram.com" class="social-icon "><img src="img/icons/instagram.png" alt="Instagram Logo"class="social-icon" width="50"></a>
+					<h6 class="copyright">&copy; 2015 Pete Isgrigg</h6>
+				</div>
+				
+<!-- 				<div class="col-xs-6">
+					<nav id="bottom-nav" class="links">
+						<a href="index.html">Home</a>
+						<a href="about.html">About</a>
+						<a href="market.html">Marketplace</a>
+						<a href="contact.html">Contact</a>
+					</nav>			
+				</div>	 -->
+			</div>
+		</footer>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<script src="js/DM.js" type="text/javascript" charset="utf-8"></script>
+    <script src="./js/bootstrap.min.js"></script>
+	</body>
+</html>
