--- a/DixxieMae_Graphics/about.html
+++ b/DixxieMae_Graphics/about.html
@@ -8,42 +8,40 @@
 
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href='http://fonts.googleapis.com/css?family=Bangers|Oswald:400,300,700|Roboto:400,300,100' rel='stylesheet' type='text/css'>
-    	<link rel="stylesheet" type="text/css" href="css/dixxiemae.css">
+    	<link rel="stylesheet" type="text/css" href="css/dixxiemae1.css">
 	</head>
 
 	<body>
-		<header id="top" class="main-header container-fluid img-responsive">
+		<header id="top" class="main-header2 container-fluid img-responsive">
 			<a id="title" href="index.html">
-				<span class="title text-center"><h1>Dixxie Mae Graphics</h1><h3>"A little bit of everything"</h3></span></a>
-				<nav id="top-nav"class="links">
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="market.html">Marketplace</a></li>
-						<li><a href="contact.html">Contact</a></li>
-					</ul>	
-				</nav>
-				
+				<span class="title2 text-center"><h1>Dixxie Mae Graphics</h1><h2>"A little bit of everything"</h2></span></a>
 		</header>
-		<div class="primary">
-
+		<nav id="top-nav">
 			<div class="container">
-					<h2 class="subtitle text-center"><u>Image Gallery</u></h2>
-					<ul id="imageGallery" class="gallery text-center">
-						<li><a href="img/collection/ash.png"><img src="img/collection/ash.png" width="100" alt="Army of Darkness"></a></li>
-						<li><a href="img/collection/candyapple.png"><img src="img/collection/candyapple.png" width="100" alt="Candy Apple"></a></li>
-						<li><a href="img/collection/carniverouswives.png"><img src="img/collection/carniverouswives.png" width="100" alt="carniverouswives.png"></a></li>
-						<li><a href="img/collection/cupcake_gun_tattoo.png"><img src="img/collection/cupcake_gun_tattoo.png" width="100" alt="cupcake_gun_tattoo.png"></a></li>
-						<li><a href="img/collection/mermaidminnie.png"><img src="img/collection/mermaidminnie.png" width="100" alt="mermaidminnie.png"></a></li>
-						<li><a href="img/collection/skull_bunny_pattern_by_dixxiemae-d71t3st.png"><img src="img/collection/skull_bunny_pattern_by_dixxiemae-d71t3st.png" width="100" alt="skull_bunny_pattern.png"></a></li>
-						<li><a href="img/collection/swhite.png"><img src="img/collection/swhite.png" width="100" alt="Snow White"></a></li>
-					</ul>
+				<ul class="nav nav-pills nav-justified center-block link-buttons">
+				  <li role="presentation" class="active"><a class="btn inpage0" href="index.html">HOME</a></li>
+				  <li role="presentation"><a class="btn inpage1" href="about.html" role="button">ABOUT</a></li>
+				  <li role="presentation"><a class="btn inpage2" href="contact.html" role="button">CONTACT</a></li>
+				  <li role="presentation"><a class="btn inpage3" href="gallery.html" role="button">GALLERY</a></li>
+				</ul>	
 			</div>
+		</nav>
+
+		<div class="primary">
 			<div class="container">
-					<p class="summary2">Dixxie Mae is an art and design brand with works made by Brooke Hernando. Based out of Louisville with a strong online presence, you can find most of my works on my Tumblr or on my other pages listed below.</p>
-			
-					<p class="summary2">I have been working in digital art since about 2004 and am trying to improve and try new things everyday. Most work is done in either Photoshop CS4 or CS6, though I’m open to trying out different programs and tablets. I work in traditional mediums as well, but that’s usually involved with my comics.</p>
-			
-					<p class="summary2">I have a strong art background and I cover everything from comics, sketches, digital illustrations, portraits, graphic design, and some photography. I am also familiar with almost everything else.</p>
+				<div class="row">
+					<div>
+						<div class="col-md-12">
+							<p class="summary2">Dixxie Mae is an art and design brand with works made by Brooke Hernando. Based out of Louisville with a strong online presence, you can find most of my works on my Tumblr or on my other pages listed below.Brooke has been working in digital art since about 2004 and is trying to improve and try new things everyday. Most work is done in either Photoshop CS4 or CS6, though she is open to trying out different programs and tablets. She works in traditional mediums as well, but that’s usually involved with her comics. She has a strong art background and is able cover everything from comics, sketches, digital illustrations, and portraits to graphic design, and some photography. She is also familiar with almost everything else under the sun.</p>
+						</div>
+<!-- 						<div class="col-md-6 link-buttons about-link btn-group-vertical" role="group">
+						<a class="btn inpage0" href="index.html" role="button">HOME</a>
+						<a class="btn inpage1" href="about.html" role="button">ABOUT</a>
+						<a class="btn inpage2" href="contact.html" role="button">CONTACT</a>
+						<a class="btn inpage3" href="gallery.html" role="button">GALLERY</a>
+						</div> -->
+					</div>	
+				</div>
 			</div>
 			
 		</div>
@@ -51,24 +49,27 @@
 
 
 		<footer id="bottom" class="main-footer container-fluid">
-			<div id="social-media">
-				<a href="http://twitter.com" class="social-icon"><img src="img/icons/twitter.png" alt="Twitter Logo" class="social-icon"></a>
-				<a href="http://facebook.com/" class="social-icon"><img src="img/icons/facebook.png" alt="Facebook Logo"class="social-icon"></a>
-				<a href="http://tumblr.com/" class="social-icon"><img src="img/icons/tumblr.png" alt="tumblr Logo"class="social-icon"></a>
-				<a href="http://instagram.com" class="social-icon"><img src="img/icons/instagram.png" alt="Instagram Logo"class="social-icon"></a>
-				<p>&copy; 2015 Pete Isgrigg</p>
-			</div>
-			<div>
-<!-- 				<nav id="bottom-nav" class="links">
-					<a href="index.html">Home</a>
-					<a href="about.html">About</a>
-					<a href="market.html">Marketplace</a>
-					<a href="contact.html">Contact</a>
-				</nav> -->
+			<div class="rows">
+				<div id="social-media" class="col-xs-4 col-xs-offset-4 social-media">
+					<a href="http://twitter.com" class="social-icon"><img src="img/icons/twitter.png" alt="Twitter Logo" class="social-icon" width="50"></a>
+					<a href="http://facebook.com/" class="social-icon " ><img src="img/icons/facebook.png" alt="Facebook Logo"class="social-icon" width="50"></a>
+					<a href="http://tumblr.com/" class="social-icon"><img src="img/icons/tumblr.png" alt="tumblr Logo"class="social-icon" width="50"></a>
+					<a href="http://instagram.com" class="social-icon "><img src="img/icons/instagram.png" alt="Instagram Logo"class="social-icon" width="50"></a>
+					<h6 class="copyright">&copy; 2015 Pete Isgrigg</h6>
+				</div>
 				
-			</div>	
+<!-- 				<div class="col-xs-6">
+					<nav id="bottom-nav" class="links">
+						<a href="index.html">Home</a>
+						<a href="about.html">About</a>
+						<a href="market.html">Marketplace</a>
+						<a href="contact.html">Contact</a>
+					</nav>			
+				</div>	 -->
+			</div>
 		</footer>
-	<script src="http://code.jquery.com/jquery-1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="js/DM.js" type="text/javascript" charset="utf-8"></script>
+    <script src="./js/bootstrap.min.js"></script>
 	</body>
 </html>
