Finishing up Responsiveness
Finishing up Responsiveness

--- a/DixxieMae_Graphics/contact.html
+++ b/DixxieMae_Graphics/contact.html
@@ -30,19 +30,19 @@
 <div class="container">
 			<div class="row">
 				<div class="">
-					<div class="col-md-6">
-						<h2 class="text-center"><u>Looking for an artist?</u></h2>
+					<div class="col-md-7 text-center">
+						<h2 ><u>Looking for an artist?</u></h2>
 						<p class="summary2">If you have questions or are looking to hire an amazing graphic artist, please take the time to submit your name and email. Brooke will do everything she can to respond promptly. If you are more comfortable with Facebook please see the link at the bottom of the page.</p>
 					</div>
-					<div class="col-md-6">
-						<form id="contact-form" action="" method="post">
-						<legend class="subtitle"><h2>Contact Form</h2></legend>
+					<div class="col-md-5">
+						<form id="contact-form" action="" method="post" class="center-block text-center">
+						<legend class="subtitle"><h2><u>Contact Form</u></h2></legend>
 						<fieldset class="contact-info">
 							<label for="name">Name:</label><br>	
 							<input type="text" id="name" name="firstname"><br>
 							<label for="emailaddress">Email Address:</label><br>
 							<input type="text" id="emailaddress" name="email"><br>
-							<button type="submit" formaction="">SUBMIT</button>
+							<button type="submit" class="btn btn-success submit-button">SUBMIT</button>
 						</fieldset>	
 						</form>
 					</div>
@@ -62,15 +62,6 @@
 					<a href="http://instagram.com" class="social-icon "><img src="img/icons/instagram.png" alt="Instagram Logo"class="social-icon" width="50"></a>
 					<h6 class="copyright">&copy; 2015 Pete Isgrigg</h6>
 				</div>
-				
-<!-- 				<div class="col-xs-6">
-					<nav id="bottom-nav" class="links">
-						<a href="index.html">Home</a>
-						<a href="about.html">About</a>
-						<a href="market.html">Marketplace</a>
-						<a href="contact.html">Contact</a>
-					</nav>			
-				</div>	 -->
 			</div>
 		</footer>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
