--- a/DixxieMae_Graphics/gallery.html
+++ b/DixxieMae_Graphics/gallery.html
@@ -20,7 +20,7 @@
 				<span class="subtitle"><h2>"A little bit of everything"</h2></span></a>		 -->
 			</header>
 		</div>	
-		<nav id="top-nav">
+		<nav id="top-nav1">
 			<div class="container">
 				<ul class="nav nav-pills nav-justified center-block link-buttons">
 				  <li role="presentation" class="active"><a class="inpage0" href="index.html">HOME</a></li>
@@ -34,23 +34,35 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 center-block">					
-						<div class="col-xs-12">
+						<div class="">
 							<h2 class="text-center"><u>Image Gallery</u></h2>
 							<ul id="imageGallery" class="gallery ">
 								<li><a href="img/collection/candyapple.png"><img src="img/collection/candyapple.png" width="100" alt="Candy Apple"></a></li>
-								<li><a href="img/collection/carniverouswives.png"><img src="img/collection/carniverouswives.png" width="100" alt="carniverouswives.png"></a></li>
-								<li><a href="img/collection/cupcake_gun_tattoo.png"><img src="img/collection/cupcake_gun_tattoo.png" width="100" alt="cupcake_gun_tattoo.png"></a></li>
-								<li><a href="img/collection/mermaidminnie.png"><img src="img/collection/mermaidminnie.png" width="100" alt="mermaidminnie.png"></a></li>
-								<li><a href="img/collection/skull_bunny_pattern_by_dixxiemae-d71t3st.png"><img src="img/collection/skull_bunny_pattern_by_dixxiemae-d71t3st.png" width="100" alt="skull_bunny_pattern.png"></a></li>
+								<li><a href="img/collection/carniverouswives.png"><img src="img/collection/carniverouswives.png" width="100" alt="Carniverous Wives"></a></li>
+								<li><a href="img/collection/cupcake_gun_tattoo.png"><img src="img/collection/cupcake_gun_tattoo.png" width="100" alt="Killer Queen"></a></li>
+								<li><a href="img/collection/mermaidminnie.png"><img src="img/collection/mermaidminnie.png" width="100" alt="Mermaid Minnie"></a></li>
+								<li><a href="img/collection/skull_bunny_pattern_by_dixxiemae-d71t3st.png"><img src="img/collection/skull_bunny_pattern_by_dixxiemae-d71t3st.png" width="100" alt="Skull Bunny Pattern"></a></li>
 								<li><a href="img/collection/swhite.png"><img src="img/collection/swhite.png" width="100" alt="Snow White"></a></li>
 							</ul>
 						</div>
-						<div id="overlay"></div>
-					
+											
 					</div>		
 
 				</div>
 			</div>
+
+		<nav id="bottom-nav1">
+			<div class="container">
+				<ul class="nav nav-pills nav-justified center-block link-buttons">
+				  <li role="presentation" class="active"><a class="inpage0" href="index.html">HOME</a></li>
+				  <li role="presentation"><a class="btn inpage1" href="about.html" role="button">ABOUT</a></li>
+				  <li role="presentation"><a class="btn inpage2" href="contact.html" role="button">CONTACT</a></li>
+				  <li role="presentation"><a class="btn inpage3" href="gallery.html" role="button">GALLERY</a></li>
+				</ul>	
+			</div>
+		</nav>	
+
+
 			<footer id="bottom" class="main-footer container-fluid">
 			<div class="rows">
 				<div id="social-media" class="col-xs-4 col-xs-offset-4 social-media">
