--- a/DixxieMae_Graphics/about.html
+++ b/DixxieMae_Graphics/about.html
@@ -32,6 +32,7 @@
 				<div class="row">
 					<div>
 						<div class="col-md-12">
+							<h2 class="text-center"><u>About Dixxie Mae</u></h2>
 							<p class="summary2">Dixxie Mae is an art and design brand with works made by Brooke Hernando. Based out of Louisville with a strong online presence, you can find most of my works on my Tumblr or on my other pages listed below.Brooke has been working in digital art since about 2004 and is trying to improve and try new things everyday. Most work is done in either Photoshop CS4 or CS6, though she is open to trying out different programs and tablets. She works in traditional mediums as well, but that’s usually involved with her comics. She has a strong art background and is able cover everything from comics, sketches, digital illustrations, and portraits to graphic design, and some photography. She is also familiar with almost everything else under the sun.</p>
 						</div>
 <!-- 						<div class="col-md-6 link-buttons about-link btn-group-vertical" role="group">
