--- a/DixxieMae_Graphics/index.html
+++ b/DixxieMae_Graphics/index.html
@@ -22,7 +22,7 @@
 				<span class="subtitle"><h2>"A little bit of everything"</h2></span></a>		 -->
 			</header>
 		</div>
-		<nav id="top-nav">
+		<nav id="top-nav1">
 			<div class="container">
 				<ul class="nav nav-pills nav-justified center-block link-buttons">
 				  <li role="presentation" class="active"><a class="inpage0" href="index.html">HOME</a></li>
@@ -35,17 +35,30 @@
 		<div class="container main-content">
 			<div class="primary row">
 		      	<div class="col-md-5 text-center">
-			      	<p>Digital illustration and design, catering primarily to digital comic illustrations and shirt/sticker design. Inspirations from geek and pop culture.</p>
+			      	<p class="summary1">Digital illustration and design, catering primarily to digital comic illustrations and shirt/sticker design. Inspirations from geek and pop culture.</p>
   					
 						
 				</div>
 			
 				<div class="col-md-7">
-					<img src="img/unnamed.png" class="index-img img-rounded img-responsive center-block">
+					<!-- <a href="img/unnamed.png" alt="Unnamed Work"><img src="img/unnamed.png" class="index-img img-rounded img-responsive center-block"></a> -->
+
+					<ul id="imageGallery" >
+						<a href="img/unnamed.png"><img src="img/unnamed.png" alt="Unnamed Work" class="index-img img-rounded img-responsive center-block"></a>
+					</ul>
 				</div>
 			</div>	
 		</div>
-
+		<nav id="bottom-nav1">
+			<div class="container">
+				<ul class="nav nav-pills nav-justified center-block link-buttons">
+				  <li role="presentation" class="active"><a class="inpage0" href="index.html">HOME</a></li>
+				  <li role="presentation"><a class="btn inpage1" href="about.html" role="button">ABOUT</a></li>
+				  <li role="presentation"><a class="btn inpage2" href="contact.html" role="button">CONTACT</a></li>
+				  <li role="presentation"><a class="btn inpage3" href="gallery.html" role="button">GALLERY</a></li>
+				</ul>	
+			</div>
+		</nav>
 
 		<footer id="bottom" class="main-footer container-fluid">
 			<div class="rows">
@@ -69,5 +82,6 @@
 		</footer>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
+    <script src="js/DM.js" type="text/javascript" charset="utf-8"></script>
 	</body>
 </html>
